--- a/css/style.css
+++ b/css/style.css
@@ -172,4 +172,19 @@ header{
     border-style: dashed;
 }
 
-
+/* -------SECTION_5-------- */
+/* size, color and flex properties section 1 */
+.section_5{
+    height: 1300px;
+    background-color: lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* size, color and border container */
+.container_section_5{
+    width: 70%;
+    height: 1150px;
+    background-color: rgba(34,139,34,1);
+    border-style: dashed;
+}
